# Airs

./: Cargo.toml
projects/airs/: Cargo.toml
projects/airs-layers/: Cargo.toml
projects/airs-layers/src/: lib.rs
projects/airs-layers/src/activation_layer/: mod.rs
projects/airs-layers/src/convolution_layer/: mod.rs
projects/airs-layers/src/layers_extension/: mod.rs
projects/airs-layers/src/normalization_layer/: mod.rs
projects/airs-layers/tests/: main.rs
projects/airs-layers/tests/variable/: mod.rs
projects/airs-types/: Cargo.toml
projects/airs-types/src/: errors.rs  lib.rs
projects/airs-types/src/data_type/: der.rs  mod.rs
projects/airs-types/src/device/: mod.rs
projects/airs-types/src/errors/: mod.rs
projects/airs-types/src/layers/: mod.rs
projects/airs-types/src/tensor/: mod.rs
projects/airs-types/src/tensor/device/: mod.rs
projects/airs-types/src/tensor/from_image/: mod.rs
projects/airs-types/src/variable/: mod.rs  names.rs
projects/airs-types/tests/variable/: mod.rs
projects/airs/src/: lib.rs
projects/airs/tests/: main.rs
