[package]
name = "airs-types"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/sub_projects"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
dashmap = "5.4.0"
ndarray = { version = "0.15.6", optional = true }
image = { version = "0.24.5", optional = true }
safetensors = "0.3.0"

[dependencies.serde]
version = "1.0.152"
features = ["derive"]

[dev-dependencies]

[features]
default = ["image", "ndarray"]
